add window changed

--- a/src/components/win-tab/win-tab.scss
+++ b/src/components/win-tab/win-tab.scss
@@ -16,6 +16,7 @@
     top: 90%;
     left: 88%;
     transform: translateX(210px);
+    text-align: center;
     &.active {
         transform: translateX(0);
     }
