--- a/src/components/add-window/add-window.scss
+++ b/src/components/add-window/add-window.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     .add_tab {
         width: 80%;
-        height: 500px;
+        min-height: 800px;
         display: flex;
         align-items: center;
         justify-content: center;
