--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -5,7 +5,8 @@
 }
 .App {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     overflow: hidden;
     justify-content: center;
+    background-color: #EAEAEA;
 }
