--- a/src/components/bet-list-item/bet-list-item.scss
+++ b/src/components/bet-list-item/bet-list-item.scss
@@ -4,39 +4,65 @@
 .bet-list-item {
     width: 80%;
     height: 200px;
+    margin-top: 15px;
+    background-color: white;
+    border-radius: 15px;
     display: flex;
     justify-content: center;
-    margin-top: 15px;
-    .bet_team_one, .bet_team_two{
-        position: relative;
-        width: 50%;
-        height: 100%;
+    align-items: center;
+    flex-direction: column;
+    .team-names {
+        width: 70%;
+        height: 75%;
         display: flex;
-        overflow: hidden;
+        .team-name {
+            font-weight: 500;
+            font-size: 1.15rem;
+        }
+        .time {
+            width: 20%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            .date {
+                color: #F775FF;
+            }
+            .time-hrs {
+                font-size: 1.4rem;
+                font-weight: 600;
+            }
+        }
+        .team-one, .team-two {
+            width: 40%;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            .team-img {
+                width: 5em;
+                height: 5em;
+                border-radius: 50%;
+                overflow: hidden;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img {
+                    width: 5em;
+                    height: 5em;
+                }
+            }
+        }
+    }
+    
+    .team-buttons {
+        width: 100%;
+        height: 25%;
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
-        font-family: 'Lato', sans-serif;
-    }
-    input[type=text]{
-        padding:10px;
-        border-radius: 10px;
-        background-color: transparent;
-        display: flex;
-        justify-content: center;
-        transition: 0.2s;
-        display: none;
-        opacity: 0;
-        width: 200px;
-        height: 40px;
-        border: 2px #6D1FFF solid;
-    }
-    input[type=text]::placeholder{
-        color: #434446;
-        font-size: 1.2rem;
-    }
-    input[type=text]:focus{
-        outline: none;
+        gap: 27%;
     }
 }
