--- a/src/components/win-tab/win-tab.scss
+++ b/src/components/win-tab/win-tab.scss
@@ -2,7 +2,7 @@
     display: flex;
     position: fixed;
     width: 200px;
-    height: 70px;
+    height: 50px;
     z-index: 10000;
     transition: 0.3s ease;
     border-radius: 15px;
@@ -13,11 +13,11 @@
     font-size: 1.3rem;
     font-weight: 400;
     background-color: black;
-    top: 90%;
-    left: 88%;
-    transform: translateX(210px);
+    top: 94%;
+    left: 44%;
+    transform: translateY(50px);
     text-align: center;
     &.active {
-        transform: translateX(0);
+        transform: translateY(-20px);
     }
   }
