--- a/src/components/bet-window/bet-window.scss
+++ b/src/components/bet-window/bet-window.scss
@@ -14,4 +14,9 @@
         color: white;
         margin-bottom: 10px;
     }
+    @media only screen and (max-width: 480px) {
+        border-radius: 0;
+        width: 100vw;
+        left: 0;
+    }
 }
