--- a/src/components/add-window/add-window.scss
+++ b/src/components/add-window/add-window.scss
@@ -1,6 +1,6 @@
 .container_add{
     width: 100%;
-    height: 90vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     .add_tab {
@@ -13,51 +13,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            input{
-                height: 50px;
-                width: 160%;
-                margin-top: 20px;
-            }
-            .add_button{
-                position: relative;
-                width: 100px;
-                height: 50px;
-                overflow: hidden;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin-top: 20px;
-                font-family: 'Lato', sans-serif;
-                font-weight: 600;
-                font-size: 30px;
-                border-radius: 30px;
-                z-index: 1000;
-                border: solid black 1px;
-                &::before {
-                    content: '';
-                    position: absolute;
-                    transform: translateY(60px);
-                    width: 100px;
-                    height: 60px;
-                    background-image: linear-gradient( 135deg, #81FBB8 10%, #28C76F 100%);
-                    transition: 0.4s ease;
-                    z-index: 8;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                }
-                p{
-                    position: relative;
-                    margin: 0 auto;
-                    z-index: 1000;
-                }
-                &:hover{
-                    cursor: pointer;
-                }
-                &:hover::before{
-                    transform: translateY(0px);
-                }
-            }
         }
         
     }
