--- a/src/components/bet-list-item/bet-list-item.scss
+++ b/src/components/bet-list-item/bet-list-item.scss
@@ -3,66 +3,59 @@
 
 .bet-list-item {
     width: 80%;
-    height: 200px;
+    height: 150px;
     margin-top: 15px;
     background-color: white;
     border-radius: 15px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
     .team-names {
-        width: 100%;
-        height: 75%;
         display: flex;
-        .team-name {
-            font-weight: 500;
-            font-size: 1.15rem;
-        }
-        .time {
-            width: 20%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            .date {
-                color: #F775FF;
-            }
-            .time-hrs {
-                font-size: 1.4rem;
-                font-weight: 600;
-            }
-        }
+        flex-direction: column;
+        width: 40%;
+        height: 100%;
         .team-one, .team-two {
-            width: 50%;
-            height: 100%;
+            height: 50%;
+            width: 100%;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
             align-items: center;
+            justify-content: center;
             .team-img {
-                width: 5em;
-                height: 5em;
+                height: 35px;
+                width: 35px;
                 border-radius: 50%;
                 overflow: hidden;
                 display: flex;
-                justify-content: center;
                 align-items: center;
+                justify-content: center;
                 img {
-                    width: 5em;
-                    height: 5em;
+                    height: 40px;
+                    width: 40px;
                 }
+            }
+            .team-name {
+                margin-left: 15px;
             }
         }
     }
-    
-    .team-buttons {
-        width: 100%;
-        height: 25%;
+    .time {
         display: flex;
+        flex-direction: column;
+        width: 20%;
+        height: 100%;
         justify-content: center;
         align-items: center;
-        gap: 27%;
+        .time-hrs {
+            font-size: 1.2rem;
+            font-weight: 500;
+        }
+    }
+    .team-buttons {
+        width: 70%;
+        height: 100%;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        gap: 15px;
     }
 }
